--- a/fhotel-website/public/css/style.css
+++ b/fhotel-website/public/css/style.css
@@ -8011,10 +8011,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #d4ca68; }
+  color: #38b6ff; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #d4ca68;
+    color: #38b6ff;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -8027,7 +8027,7 @@ h1, h2, h3, h4, h5,
   max-width: 1250px; }
 
 .text-primary {
-  color: #d4ca68 !important; }
+  color: #38b6ff !important; }
 
 .ftco-navbar-light {
   background: transparent !important;
@@ -8061,7 +8061,7 @@ h1, h2, h3, h4, h5,
     font-weight: 600;
     opacity: 1 !important; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-      color: #d4ca68; }
+      color: #38b6ff; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
         padding-left: 0;
@@ -8095,13 +8095,13 @@ h1, h2, h3, h4, h5,
           display: none; } }
   .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
     color: #fff;
-    border: 1px solid #d4ca68;
+    border: 1px solid #38b6ff;
     padding-top: .5rem;
     padding-bottom: .5rem;
     padding-left: 18px;
     padding-right: 18px;
     margin-top: 4px;
-    background: #d4ca68;
+    background: #38b6ff;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     -ms-border-radius: 2px;
@@ -8110,16 +8110,16 @@ h1, h2, h3, h4, h5,
       display: inline-block;
       color: #fff; }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-      background: #d4ca68;
-      border: 1px solid #d4ca68; }
+      background: #38b6ff;
+      border: 1px solid #38b6ff; }
   .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored a {
     border: 1px solid #f7b71d;
     background: #f7b71d !important; }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #d4ca68; }
+    color: #38b6ff; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-      color: #d4ca68; } }
+      color: #38b6ff; } }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -8130,7 +8130,7 @@ h1, h2, h3, h4, h5,
     letter-spacing: .1em; }
     .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
       text-decoration: none;
-      color: #d4ca68;
+      color: #38b6ff;
       outline: none !important; }
   .ftco-navbar-light.scrolled {
     position: fixed;
@@ -8147,10 +8147,10 @@ h1, h2, h3, h4, h5,
         padding-right: 0 !important;
         padding-bottom: 0 !important; } }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #d4ca68 !important; }
+      color: #38b6ff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
-      background: #d4ca68;
+      background: #38b6ff;
       border: none !important;
       padding-top: 0.5rem !important;
       padding-bottom: .5rem !important;
@@ -8165,7 +8165,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color: #fff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-      border-color: #d4ca68; }
+      border-color: #38b6ff; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .navbar-nav {
         background: none;
@@ -8186,7 +8186,7 @@ h1, h2, h3, h4, h5,
       padding-bottom: 0.9rem !important;
       color: #000000 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #d4ca68 !important; }
+        color: #38b6ff !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -8234,7 +8234,7 @@ h1, h2, h3, h4, h5,
     z-index: -1; }
   .hero-wrap .overlay-2 {
     z-index: -2;
-    background: #d4ca68;
+    background: #38b6ff;
     background: #d4c968;
     background: -moz-linear-gradient(left, #d4c968 0%, rgba(212, 201, 104, 0.9) 36%, rgba(212, 201, 104, 0.55) 50%, rgba(255, 255, 255, 0) 100%);
     background: -webkit-gradient(left top, right top, color-stop(0%, #d4c968), color-stop(36%, rgba(212, 201, 104, 0.9)), color-stop(50%, rgba(212, 201, 104, 0.55)), color-stop(100%, rgba(255, 255, 255, 0)));
@@ -8270,7 +8270,7 @@ h1, h2, h3, h4, h5,
   .slider-text .icon-wrap .icon {
     width: 70px;
     height: 70px;
-    background: #d4ca68;
+    background: #38b6ff;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -8310,9 +8310,9 @@ h1, h2, h3, h4, h5,
       .slider-text .breadcrumbs span a {
         color: rgba(0, 0, 0, 0.7); }
         .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-          color: #d4ca68; }
+          color: #38b6ff; }
           .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-            color: #d4ca68; }
+            color: #38b6ff; }
   .slider-text .bread {
     font-weight: 400 !important;
     position: relative; }
@@ -8343,7 +8343,7 @@ h1, h2, h3, h4, h5,
     width: 70px;
     height: 70px;
     border-radius: 0 50% 50% 50%;
-    background: #d4ca68; }
+    background: #38b6ff; }
     .search-location .form-group button span {
       font-size: 30px;
       color: #fff; }
@@ -8441,7 +8441,7 @@ h1, h2, h3, h4, h5,
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       margin-top: -10px;
-      color: #d4ca68 !important;
+      color: #38b6ff !important;
       -moz-transition: all 0.7s ease;
       -o-transition: all 0.7s ease;
       -webkit-transition: all 0.7s ease;
@@ -8507,7 +8507,7 @@ h1, h2, h3, h4, h5,
   background: #f8f9fa !important; }
 
 .bg-primary {
-  background: #d4ca68; }
+  background: #38b6ff; }
 
 .btn {
   cursor: pointer;
@@ -8521,20 +8521,20 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #d4ca68 !important;
-    border: 1px solid #d4ca68 !important;
+    background: #38b6ff !important;
+    border: 1px solid #38b6ff !important;
     color: #fff !important; }
     .btn.btn-primary:hover {
-      border: 1px solid #d4ca68;
+      border: 1px solid #38b6ff;
       background: transparent;
-      color: #d4ca68; }
+      color: #38b6ff; }
     .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #d4ca68;
+      border: 1px solid #38b6ff;
       background: transparent;
-      color: #d4ca68; }
+      color: #38b6ff; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #d4ca68;
+        background: #38b6ff;
         color: #fff; }
   .btn.btn-outline-white {
     border-color: rgba(255, 255, 255, 0.8);
@@ -8548,22 +8548,22 @@ h1, h2, h3, h4, h5,
     .btn.btn-outline-white:hover, .btn.btn-outline-white:focus, .btn.btn-outline-white:active {
       background: #fff;
       border-color: #fff;
-      color: #d4ca68; }
+      color: #38b6ff; }
   .btn.btn-black {
     background: #000000 !important;
     border: 1px solid #000000 !important;
     color: #fff !important; }
     .btn.btn-black:hover {
-      border: 1px solid #d4ca68;
+      border: 1px solid #38b6ff;
       background: transparent;
-      color: #d4ca68; }
+      color: #38b6ff; }
     .btn.btn-black.btn-outline-black {
       border: 1px solid #ebebeb !important;
       background: transparent !important;
       color: #000000 !important; }
       .btn.btn-black.btn-outline-black:hover {
-        border: 1px solid #d4ca68 !important;
-        background: #d4ca68 !important;
+        border: 1px solid #38b6ff !important;
+        background: #38b6ff !important;
         color: #fff !important; }
 
 .search-wrap-1 {
@@ -8602,7 +8602,7 @@ h1, h2, h3, h4, h5,
     .search-property-1 .form-group .form-control.btn {
       padding: 22px 10px !important;
       font-size: 20px;
-      background: #d4ca68 !important;
+      background: #38b6ff !important;
       border: none !important;
       color: #fff !important; }
   .search-property-1 .form-group .select-wrap {
@@ -8638,7 +8638,7 @@ h1, h2, h3, h4, h5,
       width: 60px;
       height: 60px;
       border-radius: 50%;
-      background: #d4ca68;
+      background: #38b6ff;
       color: #fff;
       font-size: 20px;
       opacity: 0;
@@ -8702,7 +8702,7 @@ h1, h2, h3, h4, h5,
       font-size: 16px;
       font-weight: 600; }
     .property-wrap .text p.price span.orig-price {
-      color: #d4ca68; }
+      color: #38b6ff; }
     .property-wrap .text p.price span.old-price {
       color: rgba(0, 0, 0, 0.2);
       position: relative;
@@ -8734,7 +8734,7 @@ h1, h2, h3, h4, h5,
       right: 0;
       width: 40px;
       height: 40px;
-      background: #d4ca68;
+      background: #38b6ff;
       border-radius: 50% 0 0 0; }
       .property-wrap .text .btn-custom span {
         color: #fff; }
@@ -8769,7 +8769,7 @@ h1, h2, h3, h4, h5,
     right: 20px; }
     .listing-wrap .location span {
       padding: 10px;
-      background: #d4ca68;
+      background: #38b6ff;
       color: #fff; }
 
 .ftco-property-details .services .media-body .icon span {
@@ -8792,7 +8792,7 @@ h1, h2, h3, h4, h5,
 
 .property-details span.subheading {
   font-size: 18px;
-  color: #d4ca68;
+  color: #38b6ff;
   font-weight: 500;
   display: block; }
 
@@ -8808,9 +8808,9 @@ h1, h2, h3, h4, h5,
       color: rgba(0, 0, 0, 0.3);
       border: 1px solid rgba(0, 0, 0, 0.1); }
       .nav-pills li a.active {
-        background: #d4ca68 !important;
+        background: #38b6ff !important;
         color: #fff !important;
-        border: 1px solid #d4ca68; }
+        border: 1px solid #38b6ff; }
 
 .pills {
   margin-top: 40px; }
@@ -8827,7 +8827,7 @@ h1, h2, h3, h4, h5,
         font-size: 20px;
         margin-right: 15px; }
       .pills .features li.check span {
-        color: #d4ca68; }
+        color: #38b6ff; }
       .pills .features li.remove span {
         color: red; }
   .pills .head {
@@ -8890,7 +8890,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color: #b3b3b3; }
         .pills .rating-wrap .star span i {
-          color: #d4ca68; }
+          color: #38b6ff; }
         .pills .rating-wrap .star span:first-child {
           width: 62%; }
         .pills .rating-wrap .star span:last-child {
@@ -8936,7 +8936,7 @@ h1, h2, h3, h4, h5,
     width: 100px; }
     .services .icon span {
       font-size: 60px;
-      color: #d4ca68; }
+      color: #38b6ff; }
   .services .media-body {
     width: 100%;
     color: rgba(0, 0, 0, 0.8); }
@@ -8947,7 +8947,7 @@ h1, h2, h3, h4, h5,
     .services .media-body p {
       margin-bottom: 0; }
   .services.active {
-    background: #d4ca68; }
+    background: #38b6ff; }
     .services.active .icon span {
       color: #fff; }
     .services.active .media-body {
@@ -8959,7 +8959,7 @@ h1, h2, h3, h4, h5,
   .services.services-2 .icon {
     width: 90px;
     height: 90px;
-    background: #d4ca68;
+    background: #38b6ff;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -8981,7 +8981,7 @@ h1, h2, h3, h4, h5,
     position: relative;
     width: 80px;
     height: 80px;
-    background: #d4ca68;
+    background: #38b6ff;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -9001,7 +9001,7 @@ h1, h2, h3, h4, h5,
       text-transform: capitalize;
       font-size: 22px; }
   .services-wrap:hover .icon {
-    background: #d4ca68; }
+    background: #38b6ff; }
     .services-wrap:hover .icon span {
       color: #fff; }
 
@@ -9016,7 +9016,7 @@ h1, h2, h3, h4, h5,
     bottom: 0;
     content: '';
     opacity: .3;
-    background: #d4ca68; }
+    background: #38b6ff; }
   .ftco-fullwidth .text-wrapper {
     width: 100%;
     position: relative; }
@@ -9092,7 +9092,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #d4ca68 !important; }
+  background: #38b6ff !important; }
 
 .bg-black {
   background: #000000; }
@@ -9103,7 +9103,7 @@ textarea.form-control {
     font-weight: 500;
     font-size: 16px;
     margin-bottom: 0;
-    color: #d4ca68; }
+    color: #38b6ff; }
   .media-custom .media-body .position {
     font-size: 13px;
     color: #d9d9d9; }
@@ -9130,7 +9130,7 @@ textarea.form-control {
 .ftco-footer {
   font-size: 16px;
   padding: 7em 0;
-  background: #d4ca68;
+  background: #6d787d;
   color: rgba(255, 255, 255, 0.9); }
   .ftco-footer .ftco-footer-logo {
     text-transform: uppercase;
@@ -9156,9 +9156,9 @@ textarea.form-control {
   .ftco-footer p {
     color: rgba(255, 255, 255, 0.9); }
   .ftco-footer a {
-    color: #d4ca68; }
+    color: #38b6ff; }
     .ftco-footer a:hover {
-      color: #d4ca68; }
+      color: #38b6ff; }
   .ftco-footer .ftco-heading-2 {
     font-size: 17px;
     font-weight: 400;
@@ -9192,12 +9192,12 @@ textarea.form-control {
   .footer-small-nav > li a {
     margin: 0 10px 10px 0; }
     .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
-      color: #d4ca68; }
+      color: #38b6ff; }
 
 .media .ftco-icon {
   width: 100px; }
   .media .ftco-icon span {
-    color: #d4ca68; }
+    color: #38b6ff; }
 
 .ftco-media {
   background: #fff;
@@ -9221,7 +9221,7 @@ textarea.form-control {
   .ftco-media .icon {
     font-size: 50px;
     display: block;
-    color: #d4ca68; }
+    color: #38b6ff; }
   .ftco-media.text-center .ftco-icon {
     margin: 0 auto; }
 
@@ -9249,12 +9249,12 @@ textarea.form-control {
 .mouse-icon {
   width: 80px;
   height: 80px;
-  border: 1px solid #d4ca68;
+  border: 1px solid #38b6ff;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   border-radius: 50%;
-  background: #d4ca68;
+  background: #38b6ff;
   cursor: pointer;
   position: relative;
   text-align: center;
@@ -9333,7 +9333,7 @@ textarea.form-control {
   font-size: 18px;
   display: inline-block;
   margin-bottom: 0;
-  color: #d4ca68;
+  color: #38b6ff;
   font-size: 12px;
   font-weight: 600;
   letter-spacing: 2px;
@@ -9350,7 +9350,7 @@ textarea.form-control {
     width: 50px;
     height: 1px;
     margin-top: -1px;
-    background: #d4ca68; }
+    background: #38b6ff; }
   .heading-section .subheading:before {
     position: absolute;
     top: 50%;
@@ -9362,7 +9362,7 @@ textarea.form-control {
     width: 50px;
     height: 1px;
     margin-top: -1px;
-    background: #d4ca68; }
+    background: #38b6ff; }
 
 .heading-section h2 {
   font-size: 40px;
@@ -9451,7 +9451,7 @@ textarea.form-control {
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.1); }
       .testimony-section .owl-dots .owl-dot.active {
-        background: #d4ca68; }
+        background: #38b6ff; }
 
 .testimony-wrap {
   display: block;
@@ -9521,7 +9521,7 @@ textarea.form-control {
     .agent .desc .price {
       font-size: 22px;
       font-weight: 500;
-      color: #d4ca68; }
+      color: #38b6ff; }
       .agent .desc .price span {
         color: rgba(0, 0, 0, 0.2);
         font-size: 12px;
@@ -9529,7 +9529,7 @@ textarea.form-control {
     .agent .desc .icon {
       color: rgba(0, 0, 0, 0.2); }
     .agent .desc .details {
-      color: #d4ca68; }
+      color: #38b6ff; }
   .agent:hover .img:after, .agent:focus .img:after {
     opacity: .3; }
   .agent:hover .img div, .agent:focus .img div {
@@ -9594,14 +9594,14 @@ textarea.form-control {
     bottom: 0;
     content: '';
     opacity: 0;
-    background: #d4ca68; }
+    background: #38b6ff; }
     @media (min-width: 992px) {
       .ftco-counter .overlay {
         opacity: .3; } }
   .ftco-counter .text strong.number {
     font-weight: 300;
     font-size: 50px;
-    color: #d4ca68; }
+    color: #38b6ff; }
   .ftco-counter .text span {
     display: block;
     font-size: 18px;
@@ -9645,7 +9645,7 @@ textarea.form-control {
       .blog-entry .text .heading a {
         color: #000000; }
         .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-          color: #d4ca68; }
+          color: #38b6ff; }
   .blog-entry .meta > div {
     display: inline-block;
     margin-right: 5px;
@@ -9692,7 +9692,7 @@ textarea.form-control {
     margin-bottom: 4px;
     font-weight: 400; }
     .block-27 ul li a, .block-27 ul li span {
-      color: #d4ca68;
+      color: #38b6ff;
       text-align: center;
       display: inline-block;
       width: 40px;
@@ -9701,7 +9701,7 @@ textarea.form-control {
       border-radius: 50%;
       border: 1px solid #e6e6e6; }
     .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #d4ca68;
+      background: #38b6ff;
       color: #fff;
       border: 1px solid transparent; }
 
@@ -9717,7 +9717,7 @@ textarea.form-control {
 .contact-section .contact-info .icon {
   width: 60px;
   height: 60px;
-  background: #d4ca68;
+  background: #38b6ff;
   border-radius: 50%;
   margin: 0 auto; }
   .contact-section .contact-info .icon span {
@@ -9756,7 +9756,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color: #000000; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #d4ca68; }
+        color: #38b6ff; }
   .block-21 .text .meta > div {
     display: inline-block;
     font-size: 14px;
@@ -9823,7 +9823,7 @@ textarea.form-control {
         font-size: 20px; }
       .comment-list li .comment-body .meta {
         font-size: 15px;
-        color: #d4ca68; }
+        color: #38b6ff; }
       .comment-list li .comment-body .reply {
         padding: 5px 10px;
         background: #e6e6e6;
